fix overflow issue

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -91,6 +91,6 @@
 
 @media only screen and (max-width: 1080px) and (min-width: 0px) {
   .navbar {
-    grid-template-columns: 0.1% 15% 15% 15% 15% 30% 1%;
+    grid-template-columns: 0.1% 15% 15% 15% 15% 35% 1%;
   }
 }
